--- a/planner-fe/angular.json
+++ b/planner-fe/angular.json
@@ -31,6 +31,7 @@
             ],
             "styles": [
               "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "node_modules/@worktile/gantt/styles/index.scss",
               "src/styles.css"
             ],
             "scripts": []
