--- a/planner-fe/package.json
+++ b/planner-fe/package.json
@@ -18,9 +18,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@angular/cdk":  "^15.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "@worktile/gantt": "^15.1.0",
+    "html2canvas": "^1.4.1",
+    "ngx-tethys": "^15.3.9",
+    "ng-zorro-antd": "^15.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.8",
