--- a/planner-be/Cargo.toml
+++ b/planner-be/Cargo.toml
@@ -17,7 +17,7 @@ serde_json = "1.0.96"
 diesel = { version = "2.0.4", features = ["time", "sqlite", "r2d2"] }
 time = { version = "0.3.21", features = ["serde", "formatting"] }
 dotenvy = "0.15"
-jsonwebtoken = { version = "8.3.0" }
+jwt-simple = "0.11.5"
 futures = "0.3.28"
-md-5 = "0.10.5"
-hex = "0.4.3"
+#md-5 = "0.10.5"
+#hex = "0.4.3"
