--- a/planner-be/Cargo.toml
+++ b/planner-be/Cargo.toml
@@ -14,8 +14,9 @@ tokio-util = { version = "0.7.8", features = ["io"] }
 http-body = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.96"
-diesel = { version = "2.0.4", features = ["time", "sqlite", "r2d2"] }
-time = { version = "0.3.21", features = ["serde", "formatting"] }
+diesel = { version = "2.0.4", features = ["time", "postgres", "r2d2","numeric"] }
+time = { version = "0.3.21", features = ["serde-human-readable"] }
+bigdecimal = "0.3.1"
 dotenvy = "0.15"
 jwt-simple = "0.11.5"
 futures = "0.3.28"
