--- a/planner-be/Dockerfile
+++ b/planner-be/Dockerfile
@@ -1,18 +1,16 @@
-ARG BASE_IMAGE='--platform=linux/amd64 rust:latest'
-
-FROM $BASE_IMAGE as planner
+FROM --platform=linux/amd64 rust:latest as planner
 WORKDIR /app
 RUN cargo install cargo-chef
 COPY . .
 RUN cargo chef prepare  --recipe-path recipe.json
 
-FROM $BASE_IMAGE as cacher
+FROM --platform=linux/amd64 rust:latest as cacher
 WORKDIR /app
 RUN cargo install cargo-chef
 COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
 
-FROM $BASE_IMAGE as builder
+FROM --platform=linux/amd64 rust:latest as builder
 WORKDIR /app
 COPY . .
 # Copy over the cached dependencies
