--- a/planner-be/Dockerfile
+++ b/planner-be/Dockerfile
@@ -1,22 +1,15 @@
-FROM --platform=linux/amd64 rust:latest as planner
+FROM --platform=linux/amd64 lukemathwalker/cargo-chef:latest-rust-alpine3.18 as chef
 WORKDIR /app
-RUN cargo install cargo-chef
+
+FROM chef AS planner
 COPY . .
 RUN cargo chef prepare  --recipe-path recipe.json
 
-FROM --platform=linux/amd64 rust:latest as cacher
-WORKDIR /app
-RUN cargo install cargo-chef
+FROM chef AS builder
 COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
-
-FROM --platform=linux/amd64 rust:latest as builder
-WORKDIR /app
 COPY . .
-# Copy over the cached dependencies
-COPY --from=cacher /app/target target
-COPY --from=cacher $CARGO_HOME $CARGO_HOME
-RUN  cargo build --release -- -C prefer-static
+RUN  cargo build --release
 
 FROM --platform=linux/amd64 alpine:3.18
 RUN apk add --update libpq
