--- a/planner-be/Dockerfile
+++ b/planner-be/Dockerfile
@@ -12,7 +12,8 @@ COPY . .
 RUN cargo build --release
 
 FROM debian:buster-slim AS runtime
-RUN apt update && apt install -y libpq-dev && apt install -y libc6
+RUN apt update && apt install -y libpq-dev
+RUN apt install -y libc6
 WORKDIR /app
 COPY --from=builder /app/target/release/planner-be /usr/local/bin
 ENTRYPOINT ["/usr/local/bin/planner-be"]
