--- a/planner-be/Dockerfile.alpine
+++ b/planner-be/Dockerfile.alpine
@@ -9,7 +9,7 @@ FROM chef AS builder
 COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
 COPY . .
-RUN apk --update add libpq-dev
+RUN apk --update add libpq-dev libc-dev
 RUN cargo build --release
 
 FROM alpine AS runtime
