--- a/planner-be/Dockerfile
+++ b/planner-be/Dockerfile
@@ -12,7 +12,7 @@ COPY . .
 RUN cargo build --release
 
 FROM debian:bullseye-slim AS runtime
-RUN apt update && apt install -y libpq-dev && apt install -y libc6-dev
+RUN apt update && apt install -y libpq-dev && apt install -y libc6-dev && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 COPY --from=builder /app/target/release/planner-be /usr/local/bin
 ENTRYPOINT ["/usr/local/bin/planner-be"]
