--- a/planner-be/Dockerfile.alpine
+++ b/planner-be/Dockerfile.alpine
@@ -9,11 +9,11 @@ FROM chef AS builder
 COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
 COPY . .
-RUN apk --update add libpq-dev libc-dev
+RUN apk --update add libpq-dev libc6-compat
 RUN cargo build --release
 
 FROM alpine AS runtime
-RUN apk --update add libpq-dev libc-dev
+RUN apk --update add libpq-dev libc6-compat
 WORKDIR /app
 COPY --from=builder /app/target/release/planner-be /usr/local/bin
 ENTRYPOINT ["/usr/local/bin/planner-be"]
