--- a/planner-be/Dockerfile.alpine
+++ b/planner-be/Dockerfile.alpine
@@ -16,4 +16,5 @@ FROM alpine AS runtime
 RUN apk --update add libpq-dev libc6-compat
 WORKDIR /app
 COPY --from=builder /app/target/release/planner-be /usr/local/bin
+EXPOSE 3500
 ENTRYPOINT ["/usr/local/bin/planner-be"]
