--- a/planner-be/Dockerfile.azure
+++ b/planner-be/Dockerfile.azure
@@ -15,4 +15,5 @@ FROM --platform=linux/amd64 debian:buster-slim AS runtime
 RUN apt update && apt install -y libpq-dev
 WORKDIR /app
 COPY --from=builder /app/target/release/planner-be /usr/local/bin
+EXPOSE 3500
 ENTRYPOINT ["/usr/local/bin/planner-be"]
