--- a/planner-be/Dockerfile.azure
+++ b/planner-be/Dockerfile.azure
@@ -12,7 +12,7 @@ COPY . .
 RUN cargo build --release
 
 FROM --platform=linux/amd64 debian:buster-slim AS runtime
-RUN apt update && apt install -y libpq-dev
+RUN apt update && apt install -y libpq-dev && apt install -y libc6-dev
 WORKDIR /app
 COPY --from=builder /app/target/release/planner-be /usr/local/bin
 EXPOSE 3500
