--- a/planner-be/Dockerfile.azure
+++ b/planner-be/Dockerfile.azure
@@ -11,7 +11,7 @@ RUN cargo chef cook --release --recipe-path recipe.json
 COPY . .
 RUN cargo build --release
 
-FROM --platform=linux/amd64 debian:buster-slim AS runtime
+FROM --platform=linux/amd64 debian:bullseye-slim AS runtime
 RUN apt update && apt install -y libpq-dev && apt install -y libc6-dev
 WORKDIR /app
 COPY --from=builder /app/target/release/planner-be /usr/local/bin
