--- a/planner-be/Dockerfile
+++ b/planner-be/Dockerfile
@@ -1,4 +1,4 @@
-FROM lukemathwalker/cargo-chef:latest-rust-alpine AS chef
+FROM lukemathwalker/cargo-chef:latest AS chef
 WORKDIR /app
 
 FROM chef AS planner
@@ -9,11 +9,10 @@ FROM chef AS builder
 COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
 COPY . .
-RUN apk --update add libpq-dev libc6-compat
 RUN cargo build --release
 
-FROM alpine AS runtime
-RUN apk --update add libpq-dev libc6-compat
+FROM debian:bullseye-slim AS runtime
+RUN apt update && apt install -y --no-install-recommends libpq-dev && apt install -y --no-install-recommends libc6-dev && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 COPY --from=builder /app/target/release/planner-be /usr/local/bin
 EXPOSE 3500
